# OpenENV-MetaHackathon

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  commands.md  discover_schema.py  drawback.md  graders.py  inference.py  maimimplementation.md  models.py  openenv.yaml  pyproject.toml  schema.json
.github/workflows/: sync_to_hf.yml
server/: app.py  cloud_audit_env.py
tests/: test_env.py
